summit-demo-factory/deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: summit-demo-factory
  labels:
    app: summit-demo-factory
spec:
  selector:
    app: summit-demo-factory
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
