summit-demo-factory/deploy/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: summit-demo-factory
  labels:
    app: summit-demo-factory
spec:
  to:
    kind: Service
    name: summit-demo-factory
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
